--- a/package.json
+++ b/package.json
@@ -23,8 +23,10 @@
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
     "react-dom": "18.2.0",
-    "tailwindcss": "3.3.2",
     "typescript": "5.1.3",
     "urql": "^4.0.4"
+  },
+  "devDependencies": {
+    "tailwindcss": "^3.3.2"
   }
 }
