--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "eslint-config-next": "13.4.6",
     "graphql": "^16.6.0",
     "next": "13.4.6",
-    "pdfkit": "^0.13.0",
+    "pdfkit-next": "^0.11.0",
     "postcss": "8.4.24",
     "react": "18.2.0",
     "react-chartjs-2": "^5.2.0",
